ensured nav and logo alignment

--- a/src/about/NavOptions/NavOptionsHeader.module.css
+++ b/src/about/NavOptions/NavOptionsHeader.module.css
@@ -63,7 +63,8 @@
     top: 8%;
     width: 87%;
     padding: 0;
-    align-self: center;
+    left: 15px;
+  
   }
 
   .option {
@@ -76,6 +77,7 @@
   .container {
     top: 12%;
     width: 95%;
+    left: 7px;
   }
 
   .option {
